--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
               </div>
               <div class="card__face card__face--back">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Andreas.jpg" class="student-img" alt="...">
                   <div class="card-body">
@@ -130,7 +130,7 @@
                 </div>
               </div>
               <div class="card__face card__face--back">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Diederick.jpg" class="student-img" alt="...">
                   <div class="card-body">
@@ -170,7 +170,7 @@
                 </div>
               </div>
               <div class="card__face card__face--back">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Dries.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Dries Maes</h2>
@@ -209,7 +209,7 @@
                 </div>
               </div>
               <div class="card__face card__face--back">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Emma.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Emma Danckaert</h2>
@@ -243,8 +243,8 @@
                   </div>
                 </div>
               </div>
-              <div class="card__face  card__face--back card-backface-color">
-                <div class="student-card rounded-border boxshadow ">
+              <div class="card__face  card__face--back">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/avatars/No-Avatar.png" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Hoon Meskens</h2>
@@ -273,18 +273,16 @@
                   <div class="card-body">
                     <h2 class="center-text">Jens</h2>
 
-                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel
-                      grote
-                      rol. Alle
-                      cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
-                      meer
-                      dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+                    <p class="student-text">Overdags schrijf ik code, ‘s avonds vecht ik tegen de bugs.
+                      Mijn naam is Jens Van Gelder en ik ben een junior C# developer.
+                      Als je mij niet terugvindt achter mijn code dan is de kans zeer groot dat je mij wel zal vinden bij mijn vrienden rond een tabletop RPG.
+                      Ben je op zoek naar een enthousiaste en leergierige developer? Dan ben je hier op de juiste plaats!</p>
                   </div>
 
                 </div>
               </div>
               <div class="card__face card__face--back">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Jens.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Jens</h2>
@@ -324,7 +322,7 @@
                 </div>
               </div>
               <div class="card__face card__face--back">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Joyce.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Joyce</h2>
@@ -363,7 +361,7 @@
                 </div>
               </div>
               <div class="card__face card__face--back">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Kobe.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Kobe Delobelle</h2>
@@ -401,7 +399,7 @@
                 </div>
               </div>
               <div class="card__face card__face--back">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Nick.jpg" class="student-img" alt="...">
 
@@ -436,7 +434,7 @@
                 </div>
               </div>
               <div class="card__face card__face--back">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Pieter.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Pieter</h2>
@@ -476,7 +474,7 @@
                 </div>
               </div>
               <div class="card__face card__face--back">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Seba.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Sebastiaan</h2>
@@ -516,7 +514,7 @@
                 </div>
               </div>
               <div class="card__face card__face--back">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Simon.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Simon Van Tittelboom</h2>
@@ -554,7 +552,7 @@
                 </div>
               </div>
               <div class="card__face card__face--back">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Ward_Impe.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Ward Impe</h2>
@@ -586,16 +584,12 @@
                   <div class="card-body">
                     <h2 class="center-text">Michiel Wouters</h2>
 
-                    <p class="student-text">Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed
-                      veroeros
-                      lorem et blandit adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien
-                      sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora
-                      torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+                    <p class="student-text">Michiel is een leergierige developer met een uitgesproken voorliefde voor all things .Net en C#. Hij heeft verschillende jaren als consulent bij diverse bedrijven gewerkt gaande van energievoorziening, telecom tot de medische sector. Naast programmeren heeft hij ook een passie voor onderwijs zoals het opleiden van mensen binnen bedrijven en het aanmaken van online video-tutorials. Sinds kort heeft hij van deze passie zijn job gemaakt door les te geven aan de VDAB.</p>
                   </div>
                 </div>
               </div>
               <div class="card__face card__face--back">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Michiel.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Michiel Wouters</h2>
@@ -615,11 +609,11 @@
         </div>
         <!-- END Michiel -->
         <!-- START Marieke -->
-        <div class="student">
+        <div class="student ">
           <div class="scene">
             <div class="card">
               <div class="card__face card__face--front">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-card rounded-border boxshadow">
                   <img class="turn" src="./assets/images/FlipCard.png" />
                   <img src="./assets/images/avatars/Marieke.png" class="student-img" alt="...">
 
@@ -635,7 +629,7 @@
                 </div>
               </div>
               <div class="card__face card__face--back">
-                <div class="student-card rounded-border boxshadow ">
+                <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Marieke.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Marieke Verhulsdonck</h2>
@@ -702,7 +696,7 @@
   </footer>
   <script>
     let cards = document.querySelectorAll('.card');
-    // });
+  
     cards.forEach((card) => {
       card.addEventListener('click', () => {
         card.classList.toggle('is-flipped');
