--- a/index.html
+++ b/index.html
@@ -483,9 +483,7 @@
                     <img src="./assets/images/avatars/Seba.png" class="student-img" alt="...">
 
                     <p class="student-text">Hallo! Mijn naam is Sebastiaan-Willem en zoals vele anderen ben ik op zoek
-                      naar
-                      werk.
-                      Buiten mijn steeds groeiende kennis van informatica en technische vaardigheden
+                      naar werk. Buiten mijn steeds groeiende kennis van informatica en technische vaardigheden
                       ben ik leergierig, praktisch, communicatief, rationeel ingesteld en hou mezelf graag
                       creatief bezig.</p>
                   </div>
@@ -495,7 +493,7 @@
               <div class="card__face card__face--back">
                 <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
-                  <h2 class="center-text">Sebastiaan</h2>
+                  <h2 class="center-text">Sebastiaan-Willem Kesteloot</h2>
                   <div class="card-body">
                     <img src="./assets/images/Seba.jpg" class="student-img" alt="...">
                     <div class="student-text social-wrap">
@@ -606,7 +604,7 @@
                   <div class="card-body">
                     <img src="./assets/images/avatars/Michiel.png" class="student-img" alt="...">
 
-                    <p class="student-text">Michiel is een leergierige developer met een uitgesproken voorliefde voor
+                    <p class="student-text Michiel">Michiel is een leergierige developer met een uitgesproken voorliefde voor
                       all things .Net en C#. Hij heeft verschillende jaren als consulent bij diverse bedrijven gewerkt
                       gaande van energievoorziening, telecom tot de medische sector. Naast programmeren heeft hij ook
                       een passie voor onderwijs zoals het opleiden van mensen binnen bedrijven en het aanmaken van
