--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/vnd.microsoft.icon" />
   <link href="./assets/css/main.css" rel="stylesheet">
   </link>
-  <title>Jobdag Website C# .Net Developers</title>
+  <title>Jobdag C# .Net Developers</title>
 </head>
 
 <body>
@@ -73,10 +73,19 @@
         <img src="./assets/images/arrow.svg" class="img-arrow center" alt="Down-Arrow" /> </a>
     </div>
   </section>
-
-
   <!-- students section -->
   <section id="student-section">
+   <!-- header -->
+    <div class="students-card rounded-border boxshadow center">
+      <a href="#student-section">
+        <div>
+          <hr />
+          <h3>De Studenten</h3>
+          <hr />
+        </div>
+      </a>
+    </div>   
+
     <div class="container-students">
       <div class="students">
 
@@ -593,6 +602,24 @@
           </div>
         </div>
         <!-- END Ward -->
+      </div>
+    </div>
+  </section>
+   <!-- header -->
+   <div class="teachers-card rounded-border boxshadow center">
+    <a href="#teachers-section">
+      <div>
+        <hr />
+        <h1>De Lesgevers</h1>
+        <hr />
+      </div>
+    </a>
+  </div>   
+         <!-- teachers section -->
+  <section id="teachers-section">
+    <div class="container-students">
+      <div class="students">
+
         <!-- START Michiel -->
         <div class="student">
           <div class="scene">
