--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
     </div>
   </section>
    <!-- header -->
-   <div class="teachers-card rounded-border boxshadow center">
+   <div id="teachers-section" class="teachers-card rounded-border boxshadow center">
     <a href="#teachers-section">
       <div>
         <hr />
@@ -620,7 +620,7 @@
     </a>
   </div>   
          <!-- teachers section -->
-  <section id="teachers-section">
+  <section >
     <div class="container-students">
       <div class="students">
 
