--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Deze Jobdag site is een van onze projecten van deze C# .Net cursus georganiseerd door Multimedi in opdracht van de VDAB; Onze groep voor dit project bestond uit Dries Maes, Ward Impe, Seba Kesteloot en Nick Van Royen" />
+  <meta name="description" content="Deze Jobdag site is een van onze projecten van deze C# .Net cursus georganiseerd door Multimedi in opdracht van de VDAB; Onze groep voor dit project bestond uit Dries Maes, Ward Impe, Seba Kesteloot en Nick Van Royen." />
   <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/vnd.microsoft.icon" />
   <link href="./assets/css/main.css" rel="stylesheet">
   </link>
