--- a/index.html
+++ b/index.html
@@ -535,12 +535,12 @@
                   <div class="card-body">
                     <img src="./assets/images/avatars/Simon.png" class="student-img" alt="...">
 
-                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel
-                      grote
-                      rol. Alle
-                      cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
-                      meer
-                      dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+                    <p class="student-text">Gebeten door de code.
+                      Vastgehouden door de debugger. Als junior C# developer blijf ik op
+                      eeuwige queeste naar kennis. Het creëeren van iets uit 'niets' en het
+                      creatieve proces dat gepaard gaat bij de ontwikkeling van applicaties
+                      geeft me de drive om mij telkens opnieuw volledig te gooien voor elk
+                      project. Klik door op deze link voor mijn contactgegevens!</p>
                   </div>
 
                 </div>
