--- a/index.html
+++ b/index.html
@@ -784,8 +784,8 @@
     </div>
   </footer>
 
-  <script src="main.js"></script>
-
+  <script src="./assets/js/main.js"></script>
+  
 </body>
 
 </html>
