--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                   <div class="card-body">
                     <img src="./assets/images/avatars/Dries.png" class="student-img" alt="...">
 
-                    <p class="student-text">Dries is awesome.</p>
+                    <p class="student-text">Na 3 jaar te werken als project manager in de publieke IT-sector was het duidelijk dat IT mijn toekomst is. Mijn hogere scholing en werkervaring in combinatie met deze intensieve en brede opleiding maken van mij een polyvalente en capabele kandidaat. Mijn motivatie, energie en ambitie zijn een meerwaarde voor uw bedrijf. Ik stel niet teleur.</p>
                   </div>
 
                 </div>
