--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                   <h2 class="center-text">Marieke Verhulsdonck</h2>
                   <div class="card-body">
                     <img src="./assets/images/avatars/Marieke.png" class="student-img" alt="...">
-                    <p class="student-text">Trajectbegeleider: <br><br> Marieke begeleid de cursisten via sollicitatietrainingen en
+                    <p class="student-text">Trajectbegeleider: <br><br> Marieke begeleidt de cursisten via sollicitatietrainingen en
                       individuele en collectieve trajectbegeleiding.  Zij bereidt de cursisten voor op de arbeidsmarkt
                       door te focussen op zelfredzaamheid, een open feedbackcultuur en communicatie.</p>
                   </div>
