--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <div class="card__face card__face--front">
                 <div id="cardFront" class="student-card rounded-border boxshadow ">
                   <img class="turn" src="./assets/images/FlipCard.png" />
-                  <h2 class="center-text">Andreas</h2>
+                  <h2 class="center-text">Andreas Stavropoulos</h2>
                   <div class="card-body">
                     <img src="./assets/images/avatars/Andreas.png" class="student-img" alt="...">
 
@@ -112,7 +112,7 @@
               <div class="card__face card__face--back">
                 <div class="student-cardb rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
-                  <h2 class="center-text">Andreas</h2>
+                  <h2 class="center-text">Andreas Stavropoulos</h2>
                   <div class="card-body">
                     <img src="./assets/images/Andreas.jpg" class="student-img" alt="...">
                     <div class="student-text social-wrap">
