--- a/index.html
+++ b/index.html
@@ -358,12 +358,17 @@
                   <div class="card-body">
                     <img src="./assets/images/avatars/Joyce.png" class="student-img" alt="...">
 
-                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel
-                      grote
-                      rol. Alle
-                      cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
-                      meer
-                      dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+                    <p class="student-text">Alcanzamos por fin la victoria 
+                      En el campo feliz de la unión;
+                      Con ardientes fulgores de gloria 
+                      ¡Se ilumina la nueva nación! Es preciso cubrir con un velo
+                      Del pasado el calvario y la cruz;
+                      Y que adorne el azul de tu cielo
+                      De concordia la espléndida luz.El progreso acaricia tus lares.
+                      Al compás de sublime canción,
+                      Ves rugir a tus pies ambos mares
+                      Que dan rumbo a tu noble misión.
+                      </p>
                   </div>
 
                 </div>
