teacher cards alignment

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="info-card rounded-border boxshadow ">
           <img src="./assets/images/code.svg" class="card-img-top" alt="Afbeelding refererend naar het Leerprogramma">
           <div class="card-body">
-            <div class="card-text card-right d-flex">
+            <div class="card-text card-right d-flex ">
 
               <div>
                 <b>VAARDIGHEDEN</b>
@@ -707,107 +707,104 @@
       </div>
     </div>
   </section>
-  <!-- header -->
-  <div id="teachers-section" class="teachers-card rounded-border boxshadow center">
-    <a href="#teachers-section">
-      <div>
+  <!-- teachers section -->
+  <section id="teachers-section">
+    <!-- header -->
+    <div class="students-card rounded-border boxshadow center">
+      <a href="#teachers-section">
 
         <h3>De Lesgevers</h3>
 
-      </div>
-    </a>
-  </div>
-  <!-- teachers section -->
-  <section>
-    <div class="container-students">
-      <div class="students">
-
-        <!-- START Michiel -->
-        <div class="teacher-one">
-          <div class="scene">
-            <div class="card">
-              <div class="card__face card__face--front">
-                <div class="student-card rounded-border boxshadow ">
-                  <img class="turn" src="./assets/images/FlipCard.png" />
-                  <h2 class="center-text">Michiel Wouters</h2>
-                  <div class="card-body">
-                    <img src="./assets/images/avatars/Michiel.png" class="student-img" alt="...">
-                    <p class="student-text Michiel">Lesgever: <br><br> Michiel is als ervaren ontwikkelaar met ruim 8
-                      jaar ervaring ideal geplaatst om de studenten voor te bereiden op de werkvloer. Zijn kennis en
-                      ervaring worden enkel overschaduwd door zijn passie in het lesgeven.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="card__face card__face--back">
-                <div class="student-cardb rounded-border boxshadow ">
-                  <img class="turnb" src="./assets/images/FlipCardb.png" />
-                  <h2 class="center-text">Michiel Wouters</h2>
-                  <div class="card-body">
-                    <img src="./assets/images/Michiel.jpg" class="student-img" alt="...">
-                    <div class="student-text ">
-                      <div class="center">
-                        <br>
-                        <a target="_blank" href="https://www.linkedin.com/in/michiel-wouters-a5655745/"><img
-                            src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
-                        &nbsp;&nbsp;&nbsp;
-                        <a target="_blank" href="https://github.com/MichWouters"><img src="./assets/images/github.svg"
-                            alt="github" class="social-icons"></a>
-                        <br><br>
-                        <a target="_blank" href="https://www.dotnetacademy.be/"><img
-                            src="./assets/images/logo-dotnetacademi.png" alt="linkedin" class="web-link"></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END Michiel -->
-        <!-- START Marieke -->
-        <div class="teacher-two">
-          <div class="scene">
-            <div class="card">
-              <div class="card__face card__face--front">
-                <div class="student-card rounded-border boxshadow">
-                  <img class="turn" src="./assets/images/FlipCard.png" />
-                  <h2 class="center-text">Marieke Verhulsdonck</h2>
-                  <div class="card-body">
-                    <img src="./assets/images/avatars/Marieke.png" class="student-img" alt="...">
-                    <p class="student-text">Trajectbegeleider: <br><br> Marieke begeleidt de cursisten via
-                      sollicitatietrainingen en
-                      individuele en collectieve trajectbegeleiding. Zij bereidt de cursisten voor op de arbeidsmarkt
-                      door te focussen op zelfredzaamheid, een open feedbackcultuur en communicatie.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="card__face card__face--back">
-                <div class="student-cardb rounded-border boxshadow ">
-                  <img class="turnb" src="./assets/images/FlipCardb.png" />
-                  <h2 class="center-text">Marieke Verhulsdonck</h2>
-                  <div class="card-body">
-                    <img src="./assets/images/Marieke.jpg" class="student-img" alt="...">
-                    <div class="student-text ">
-                      <br>
-                      <div class="center">
-                        <a target="_blank" href="https://www.linkedin.com/in/marieke-verhulsdonck/"><img
-                            src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
-                        &nbsp;&nbsp;&nbsp;
-
-                        <br> <br>
-                        <a target="_blank" href="https://www.obelisk.be/"><img src="./assets/images/obelisk.png"
-                            alt="linkedin" class="web-link"></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END Marieke -->
-      </div>
+      </a>
     </div>
+    <div class="teachers">
+
+      <!-- START Michiel -->
+
+      <div class="scene">
+        <div class="card">
+          <div class="card__face card__face--front">
+            <div class="student-card rounded-border boxshadow ">
+              <img class="turn" src="./assets/images/FlipCard.png" />
+              <h2 class="center-text">Michiel Wouters</h2>
+              <div class="card-body">
+                <img src="./assets/images/avatars/Michiel.png" class="student-img" alt="...">
+                <p class="student-text Michiel">Lesgever: <br><br> Michiel is als ervaren ontwikkelaar met ruim 8
+                  jaar ervaring ideal geplaatst om de studenten voor te bereiden op de werkvloer. Zijn kennis en
+                  ervaring worden enkel overschaduwd door zijn passie in het lesgeven.</p>
+              </div>
+            </div>
+          </div>
+          <div class="card__face card__face--back">
+            <div class="student-cardb rounded-border boxshadow ">
+              <img class="turnb" src="./assets/images/FlipCardb.png" />
+              <h2 class="center-text">Michiel Wouters</h2>
+              <div class="card-body">
+                <img src="./assets/images/Michiel.jpg" class="student-img" alt="...">
+                <div class="student-text ">
+                  <div class="center">
+                    <br>
+                    <a target="_blank" href="https://www.linkedin.com/in/michiel-wouters-a5655745/"><img
+                        src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
+                    &nbsp;&nbsp;&nbsp;
+                    <a target="_blank" href="https://github.com/MichWouters"><img src="./assets/images/github.svg"
+                        alt="github" class="social-icons"></a>
+                    <br><br>
+                    <a target="_blank" href="https://www.dotnetacademy.be/"><img
+                        src="./assets/images/logo-dotnetacademi.png" alt="linkedin" class="web-link"></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- END Michiel -->
+      <!-- START Marieke -->
+
+      <div class="scene">
+        <div class="card">
+          <div class="card__face card__face--front">
+            <div class="student-card rounded-border boxshadow">
+              <img class="turn" src="./assets/images/FlipCard.png" />
+              <h2 class="center-text">Marieke Verhulsdonck</h2>
+              <div class="card-body">
+                <img src="./assets/images/avatars/Marieke.png" class="student-img" alt="...">
+                <p class="student-text">Trajectbegeleider: <br><br> Marieke begeleidt de cursisten via
+                  sollicitatietrainingen en
+                  individuele en collectieve trajectbegeleiding. Zij bereidt de cursisten voor op de arbeidsmarkt
+                  door te focussen op zelfredzaamheid, een open feedbackcultuur en communicatie.</p>
+              </div>
+            </div>
+          </div>
+          <div class="card__face card__face--back">
+            <div class="student-cardb rounded-border boxshadow ">
+              <img class="turnb" src="./assets/images/FlipCardb.png" />
+              <h2 class="center-text">Marieke Verhulsdonck</h2>
+              <div class="card-body">
+                <img src="./assets/images/Marieke.jpg" class="student-img" alt="...">
+                <div class="student-text ">
+                  <br>
+                  <div class="center">
+                    <a target="_blank" href="https://www.linkedin.com/in/marieke-verhulsdonck/"><img
+                        src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
+                    &nbsp;&nbsp;&nbsp;
+
+                    <br> <br>
+                    <a target="_blank" href="https://www.obelisk.be/"><img src="./assets/images/obelisk.png"
+                        alt="linkedin" class="web-link"></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- END Marieke -->
+    </div>
+
   </section>
 
   <!-- contact form -->
