toevoegen links websites

--- a/index.html
+++ b/index.html
@@ -564,11 +564,13 @@
                   <div class="card-body">
                     <img src="./assets/images/Pieter.jpg" class="student-img" alt="...">
                     <div class="student-text social-wrap">
-                      <a target="_blank" href="#"><img src="./assets/images/linkedin.svg" alt="linkedin"
+                      <a target="_blank" href="https://www.linkedin.com/in/pieter-vd-950228205/
+                      "><img src="./assets/images/linkedin.svg" alt="linkedin"
                           class="social-icons"></a>
                       <a target="_blank" href="https://github.com/pieterCorp"><img src="./assets/images/github.svg"
                           alt="github" class="social-icons"></a>
-                      <a target="_blank" href="#"><img src="./assets/images/globe.svg" alt="linkedin"
+                      <a target="_blank" href="https://pietercorp.github.io/
+                      "><img src="./assets/images/globe.svg" alt="linkedin"
                           class="social-icons"></a>
                     </div>
                   </div>
@@ -652,7 +654,7 @@
                           src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
                       <a target="_blank" href="https://github.com/SlimmyJ/"><img src="./assets/images/github.svg"
                           alt="github" class="social-icons"></a>
-                      <a target="_blank" href="#"><img src="./assets/images/globe.svg" alt="linkedin"
+                      <a target="_blank" href="https://slimmyj.github.io/"><img src="./assets/images/globe.svg" alt="linkedin"
                           class="social-icons"></a>
                     </div>
                   </div>
