--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                           alt="linkedin" class="social-icons"></a>
                       <a target="_blank" href="https://github.com/Diedericovich"><img src="./assets/images/github.svg"
                           alt="github" class="social-icons"></a>
-                      <a target="_blank" href="#"><img src="./assets/images/globe.svg" alt="linkedin"
+                      <a target="_blank" href="https://Diedericovich.github.io/"><img src="./assets/images/globe.svg" alt="linkedin"
                           class="social-icons"></a>
                     </div>
                   </div>
@@ -344,11 +344,11 @@
                   <div class="card-body">
                     <img src="./assets/images/avatars/No-Avatar.png" class="student-img" alt="...">
                     <div class="student-text social-wrap">
-                      <a target="_blank" href="#"><img src="./assets/images/linkedin.svg" alt="linkedin"
+                      <a target="_blank" href=""><img src="./assets/images/linkedin.svg" alt="linkedin"
                           class="social-icons"></a>
                       <a target="_blank" href="www.github.com/HMeskens"><img src="./assets/images/github.svg"
                           alt="github" class="social-icons"></a>
-                      <a target="_blank" href="#"><img src="./assets/images/globe.svg" alt="linkedin"
+                      <a target="_blank" href="https://HMeskens.github.io"><img src="./assets/images/globe.svg" alt="linkedin"
                           class="social-icons"></a>
                     </div>
                   </div>
@@ -393,7 +393,7 @@
                           src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
                       <a target="_blank" href="https://github.com/JensVanGelder"><img src="./assets/images/github.svg"
                           alt="github" class="social-icons"></a>
-                      <a target="_blank" href="#"><img src="./assets/images/globe.svg" alt="linkedin"
+                      <a target="_blank" href="https://JensVanGelder.github.io"><img src="./assets/images/globe.svg" alt="linkedin"
                           class="social-icons"></a>
 
                     </div>
@@ -443,7 +443,7 @@
                           src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
                       <a target="_blank" href="https://github.com/libertajoyce"><img src="./assets/images/github.svg"
                           alt="github" class="social-icons"></a>
-                      <a target="_blank" href="#"><img src="./assets/images/globe.svg" alt="linkedin"
+                      <a target="_blank" href="https://libertajoyce.github.io"><img src="./assets/images/globe.svg" alt="linkedin"
                           class="social-icons"></a>
                     </div>
                   </div>
