--- a/index.html
+++ b/index.html
@@ -417,16 +417,8 @@
                   <div class="card-body">
                     <img src="./assets/images/avatars/Joyce.png" class="student-img" alt="...">
 
-                    <p class="student-text">Alcanzamos por fin la victoria
-                      En el campo feliz de la unión;
-                      Con ardientes fulgores de gloria
-                      ¡Se ilumina la nueva nación! Es preciso cubrir con un velo
-                      Del pasado el calvario y la cruz;
-                      Y que adorne el azul de tu cielo
-                      De concordia la espléndida luz.El progreso acaricia tus lares.
-                      Al compás de sublime canción,
-                      Ves rugir a tus pies ambos mares
-                      Que dan rumbo a tu noble misión.
+                    <p class="student-text">Hallo! Ik ben Joyce Alfvoet en al heel mijn leven ben ik een kameleon. Door in verschillende landen te gewoond en verschillende talen geleerd te hebben, ben ik een multicultureel en open persoon geworden. Waar ik ook verbleef, IT is altijd de rode draad in mijn leven geweest. Nu krijg ik eindelijk de kans om via deze opleiding van mijn passie mijn beroep te maken.
+
                     </p>
                   </div>
 
